--- a/app.json
+++ b/app.json
@@ -37,7 +37,7 @@
         "THUMB_IMG": {
             "description": "fill with costum thumbnail image it's different with bg_image",
             "required": false,
-            "value": "https://telegra.ph/file/2844a65699ff40af67451.jpg"
+            "value": "https://telegra.ph/file/8008bce98aa5c60f9b37a.png"
         },
         "OWNER_NAME": {
             "description": "fill with your username without @",
