--- a/example.env
+++ b/example.env
@@ -5,7 +5,7 @@ BOT_NAME=Kennedy Music
 API_ID= #Your API ID
 API_HASH= #Your HASH
 BG_IMAGE=https://telegra.ph/file/18d25616d9883400af112.png
-THUMB_IMG=https://telegra.ph/file/2844a65699ff40af67451.jpg
+THUMB_IMG=https://telegra.ph/file/8008bce98aa5c60f9b37a.png
 SUDO_USERS=1757169682 1670523611 1727937540 # List of user IDs separated by space
 DURATION_LIMIT=30 # in minutes (default: 7)
 UPDATES_CHANNEL=KennedyProject
