--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,18 @@
 pyrogram
-tgcrypto
+TgCrypto
 py-tgcalls==0.5.5
 python-dotenv
 youtube_dl
-youtube_search_python
+youtube_search_python==1.4.6
 requests
 aiohttp
 aiofiles
 asyncio
 youtube_search
 search_engine_parser
-ffmpeg-python
-pillow
+ffmpeg
+Pillow
 future
 psutil
 wget
-motor
-dnspython
-bs4
-pyaml
+
